4.1.5
-----
1. Reduce size of playing indicator in players menu.
2. Fix clicking on MAI links for touch devices.
3. Rename 'Radio' buttons to 'Create Mix' in menu as well as toolbar.
4. Only show 'Create Mix' button if view is 800px or more wide.
5. If navigate back into previous list then try to restore position.

4.1.4
-----
 1. Fix drag'n'drop of home screen items.
 2. Sharper add/play hover icons.
 3. Fix some SVG icons not showing.
 4. Fix add/play actions not showing for some lists.
 5. Try to detect Spotify track list even when called from 'trackinfo'
 6. Change 'Biography' and 'Review' button labels to 'Information', as MAI's
    album info is more info than review.
 7. Remove all tracks from queue via long-press on clear button.
 8. Fix missing service logos.
 9. Rename 'Radio' buttons to 'Create Mix'.
10. Add 'Similar artists' list to end of MAI artist information in browse
    view.
11. Follow links by default, don't show menu.
12. Attempt to intercept text selection menu in MAI browse, and allow to copy
    or search.

4.1.3
-----
 1. Update some dependencies (Axios, Vue, Vuex).
 2. Fix clipping of menu button highlight when installed as a chrome webapp and
    using window controls.
 3. Listen for 'geometrychange' with window controls to correctly set spacing.
 4. Use square icon, with curved corners, for all as now supply a mask-able
    icon for Android, etc.
 5. Prevent weird animation when close player select menu from 'Player settings'
    dialog.
 6. Darken separators, and menu/dialog background, for 'Black' theme.
 7. If list has selected items then always show menu when click right most
    64px.
 8. Fix cases where drag can start in browse view.
 9. Fix mobile drag'n'drop when touching on image.
10. Fix white background using drag'n'drop on some systems.
11. Don't hide queue if click elsewhere whilst one of its menus is open.
12. Fix stripping ratings, track num, etc, from queue titles for use
    elsewhere.