@@ -5,6 +5,7 @@
 3. Rename 'Radio' buttons to 'Create Mix' in menu as well as toolbar.
 4. Only show 'Create Mix' button if view is 800px or more wide.
 5. If navigate back into previous list then try to restore position.
+6. Try to avoid scenario of browse "..." toolbar menu only having 1 item.
 
 4.1.4
 -----
